--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
             <version>1.7</version>
         </dependency>
 
+<!--        JWT: 管理Token-->
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.10.3</version>
+        </dependency>
+
 
     </dependencies>
 
