--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
             <version>3.10.3</version>
         </dependency>
 
+<!--        管理excel文件读取-->
+        <!-- EasyExcel -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>3.0.5</version>
+        </dependency>
+
+
+
 
     </dependencies>
 
